syntax = "proto3";

message Options {
  enum Model {
    CMU = 0;
    MOBILENET_THIN = 1;
  }

  // width and height must be multiples of 16
  message Resize {
    uint32 width = 1;
    uint32 height = 2;
  }
  string broker_uri = 1;
  string zipkin_host = 2;
  uint32 zipkin_port = 3;
  uint32 zipkin_batch_size = 9;
  string models_folder = 4;
  Model model = 5;
  Resize resize = 6;
  double resize_out_ratio = 7;
  uint32 render_topic = 8;
}